now the bot is algorithmic

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <h1>opposite guess the numbers game</h1>
 <p>WELCOME TO THE GAME BABYYYY!</p>
 <p>think about a number between 1-100 and the computer will try to guess it </p>
-<p>press play to start</p>
-
-<button onclick="generateRandomNumber()" id="generateButton">Play</button>
 
 <p id="result"></p>
 <p id="correct"></p>
@@ -21,9 +18,9 @@
 
 
 <div id="optionButtons">
-    <button onclick="generateRandomNumber()">Way too high</button>
+    <button onclick="wayTooHigh()">Way too high</button>
     <button onclick="numberCorrect()">Correct</button>
-    <button onclick="generateRandomNumber()">Way too low</button>
+    <button onclick="wayTooLow()">Way too low</button>
   </div>
 
     
